remove old handlers, fix return type on ledger and add specflow tests
